<resources>
    <string name="app_name">basemodule</string>
    <string name="main_page">首页</string>
    <string name="prompt_phone">电话号码：</string>
    <string name="username">用户名</string>
    <string name="prompt_password">密码：</string>
    <string name="password">密码</string>
    <string name="remember_password">下次自动登录</string>
    <string name="prompt_password_repeat">确认密码：</string>
    <string name="forget_password">忘记密码？</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_enroll">注册</string>
    <string name="verify_code">验证码：</string>
    <string name="get_verify_code">获取</string>
    <string name="verify_code_btn">确认</string>
    <string name="loginname">登录名：</string>
    <string name="wechat">微信：</string>
    <string name="company_name">青岛鼎信通讯股份有限公司</string>

    <string name="check_update">检查更新</string>
    <string name="login_out">注销</string>
    <string name="error_invalid_email">无效的电话号码</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">错误的密码</string>
    <string name="error_incorrect_re_password">两次密码不一致</string>
    <string name="error_field_required">必填</string>
    <string name="error_field_wrong_format">格式错误</string>
    <string name="permission_rationale">"获取您的联系人权限."</string>
    <string name="no_data">无数据...</string>
    <string name="no_more">没有更多数据...</string>

    <string name="login_url_null">登录地址不能为空！</string>

    <string name="permission_needed">开启运行所需权限</string>
    <string name="camera">摄像头</string>
    <string name="file">文件操作</string>
    <string name="location">位置信息</string>
    <string name="phone_state">手机串码</string>
    <string name="approve_opition_please">请输入审批意见</string>
    <string name="approve">同意</string>
    <string name="un_approve">不同意</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="unsupport_file">该类文件不支持</string>
    <string name="pick_soft_open_file">请选择对应的软件打开附件！</string>
    <string name="no_soft_find">sorry附件不能打开，请下载相关软件！</string>
    <string name="jump">跳过</string>
    <string name="in_now">立即体验</string>
    <string name="load_loading_tip">努力加载中</string>
    <string name="load_end_tip">没有更多数据了</string>
    <string name="inputOpinion">请输入审批意见</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据</string>

    <string name="topscomm_file">topscomm</string>
    <string name="not_null">不能为空</string>

</resources>
